<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.hotent.base</groupId>
	<artifactId>x5-base-root</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<description>基础组件及工具类</description>

	<!-- 定义该项目聚合的子模块 -->
	<modules>
		<module>modules/x5-base-parent</module>
		<module>modules/x5-base-api</module>
		<module>modules/x5-base-core</module>
		<module>modules/x5-base-db</module>
	</modules>

	<!-- 定义参数 -->
	<properties>
		<springframework.core.version>3.2.2.RELEASE</springframework.core.version>
		<junit.version>4.10</junit.version>
		<log4j.version>1.2.4</log4j.version>
		<commons-lang.version>2.6</commons-lang.version>
		<commons-io.version>2.4</commons-io.version>
		<commons-codec.version>1.8</commons-codec.version>
		<dom4j.version>1.6.1</dom4j.version>
		<json-lib.version>2.4</json-lib.version>
		<mysql.jdbc.version>5.1.25</mysql.jdbc.version>
		<mybatis.version>3.2.2</mybatis.version>
		<mybatis.spring.version>1.2.1</mybatis.spring.version>
		<org.logicalcobwebs.proxool.version>0.9.1</org.logicalcobwebs.proxool.version>
		<org.logicalcobwebs.proxool-cglib.version>0.9.1</org.logicalcobwebs.proxool-cglib.version>
		<maven-compiler-plugin.version>2.0.2</maven-compiler-plugin.version>
		<maven-source-plugin.version>2.1.1</maven-source-plugin.version>
		<maven-javadoc-plugin.version>2.8</maven-javadoc-plugin.version>
		<maven-scm-plugin.version>1.7</maven-scm-plugin.version>
		<maven-release-plugin.version>2.4.1</maven-release-plugin.version>
		<zip4j.version>1.3.1</zip4j.version>
		<pingyin.version>2.5.0</pingyin.version>
		<xmemcached.version>1.4.3</xmemcached.version>
		<freemarker.version>2.3.20</freemarker.version>
		<groovy-all.version>2.1.6</groovy-all.version>
		<commons-dbcp.version>1.4</commons-dbcp.version>
		<quartz.version>2.2.1</quartz.version>
		<sms.version>3.4.5</sms.version>
		<RXTXcomm.version>1.0</RXTXcomm.version>
		<xmlbeans.version>2.6.0</xmlbeans.version>
		<xmlschema-core.version>2.0.1</xmlschema-core.version>
		<wsdl4j.version>1.6.3</wsdl4j.version>
		<company.name>hotent</company.name>
	</properties>

	<!-- 定义全局的依赖，供子模块调用 -->
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>${mysql.jdbc.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>


			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.6.0</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>1.6.0</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.16</version>
				<scope>runtime</scope>
			</dependency>

			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>${commons-lang.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>${commons-codec.version}</version>
			</dependency>
			<dependency>
				<groupId>dom4j</groupId>
				<artifactId>dom4j</artifactId>
				<version>${dom4j.version}</version>
			</dependency>
			<dependency>
				<groupId>net.sf.json-lib</groupId>
				<artifactId>json-lib</artifactId>
				<version>${json-lib.version}</version>
				<classifier>jdk15</classifier>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-beans</artifactId>
				<version>${springframework.core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${springframework.core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${springframework.core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-aop</artifactId>
				<version>${springframework.core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${springframework.core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${springframework.core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${springframework.core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-aspects</artifactId>
				<version>${springframework.core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis</artifactId>
				<version>${mybatis.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis-spring</artifactId>
				<version>${mybatis.spring.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.logicalcobwebs</groupId>
				<artifactId>proxool</artifactId>
				<version>${org.logicalcobwebs.proxool.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.logicalcobwebs</groupId>
				<artifactId>proxool-cglib</artifactId>
				<version>${org.logicalcobwebs.proxool-cglib.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>net.lingala.zip4j</groupId>
				<artifactId>zip4j</artifactId>
				<version>${zip4j.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.belerweb</groupId>
				<artifactId>pinyin4j</artifactId>
				<version>${pingyin.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.googlecode.xmemcached</groupId>
				<artifactId>xmemcached</artifactId>
				<version>${xmemcached.version}</version>
			</dependency>
			<dependency>
				<groupId>org.freemarker</groupId>
				<artifactId>freemarker</artifactId>
				<version>${freemarker.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.codehaus.groovy</groupId>
				<artifactId>groovy-all</artifactId>
				<version>${groovy-all.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-dbcp</groupId>
				<artifactId>commons-dbcp</artifactId>
				<version>${commons-dbcp.version}</version>
			</dependency>
			<dependency>
			    <groupId>org.quartz-scheduler</groupId>
			    <artifactId>quartz</artifactId>
			    <version>${quartz.version}</version>
			</dependency>
			<dependency>
			  <groupId>org.smslib</groupId>
			  <artifactId>sms</artifactId>
			  <version>${sms.version}</version>
			</dependency>
			<dependency>
			  <groupId>org.smslib</groupId>
			  <artifactId>RXTXcomm</artifactId>
			  <version>${RXTXcomm.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlbeans</groupId>
				<artifactId>xmlbeans</artifactId>
				<version>${xmlbeans.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.ws.xmlschema</groupId>
				<artifactId>xmlschema-core</artifactId>
				<version>${xmlschema-core.version}</version>
			</dependency>
			<dependency>
				<groupId>wsdl4j</groupId>
				<artifactId>wsdl4j</artifactId>
				<version>${wsdl4j.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<profiles>
		<profile>
			<activation>
				<jdk>1.6</jdk>
			</activation>
			<id>hotent-remote-and-snapshots</id>
			<distributionManagement>
				<repository>
					<id>hotent-remote</id>
					<name>remote hotent maven release</name>
					<url>http://oa.jee-soft.cn:8081/nexus/content/groups/hotent</url>
				</repository>
				<snapshotRepository>
					<!--是否具有快照服务器，如果有将一下地址修改 -->
					<id>snapshots</id>
					<name>Snapshots</name>
					<url>http://oa.jee-soft.cn:8081/nexus/content/repositories/snapshots/</url>
				</snapshotRepository>
			</distributionManagement>
		</profile>
	</profiles>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine>
						<!-- <forkMode>pertest</forkMode> -->
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<source>1.6</source>
						<target>1.6</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-source-plugin</artifactId>
					<version>${maven-source-plugin.version}</version>
					<executions>
						<execution>
							<id>bundle-sources</id>
							<phase>package</phase>
							<goals>
								<!-- produce source artifact for main project sources -->
								<goal>jar-no-fork</goal>
								<!-- produce source artifact for project test sources -->
								<goal>test-jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${maven-javadoc-plugin.version}</version>
					<executions>
						<execution>
							<id>bundle-doc</id>
							<phase>package</phase>
							<goals>
								<goal>aggregate-jar</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-scm-plugin</artifactId>
					<version>${maven-scm-plugin.version}</version>
					<configuration>
						<connectionType>connection</connectionType>
						<goals>install</goals>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<finalName>${company.name}-${project.artifactId}-${project.version}</finalName>
		
	</build>		
	<repositories>
		<repository>  
            <id>nexus</id>  
            <name>local private nexus</name>  
            <url>http://192.168.1.8:8081/nexus/content/groups/public</url>  
        </repository> 
        <repository>
		      <id>repository.maven</id>
		      <name>Maven Repository</name>
		      <layout>default</layout>
		      <url>http://search.maven.org/</url>
		      <snapshots>
		        <enabled>true</enabled>
		      </snapshots>
	    </repository>  
	</repositories>		
</project>